--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="text_quick_checkout">Quick Checkout</string>
     <string name="text_shops">Shops</string>
     <string name="text_sale">Sale</string>
+    <string name="text_cart">Cart</string>
+    <string name="text_search">Search</string>
 </resources>
