--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="text_sale">Sale</string>
     <string name="text_cart">Cart</string>
     <string name="text_search">Search</string>
+    <string name="ruppee_symbol">₹</string>
 </resources>
